# c_neural_network

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: mnist.c
app/mnist/: CMakeLists.txt  main.c  mnist.c  mnist.h  mnist_full.c  mnist_full.h  mnist_test.c  mnist_test.h  mnist_train.c  mnist_train.h  thread_wrapper.c  thread_wrapper.h
src/: CMakeLists.txt  activation_function.c  activation_function.h  data.h  error.c  error.h  file_load.c  file_load.h  load_file.c  load_file.h  matrix.c  matrix.h  neural_network.c  neural_network.h  neural_network_file.c  neural_network_file.h  neural_network_train.c  neural_network_train.h  random.c  random.h
test/: CMakeLists.txt  test_matrix.c  test_neural_network_evaluate.c  test_neural_network_file.c  test_neural_network_train.c
tests/: matrix_test.c  neural_network_evaluate_test.c  neural_network_file_test.c  neural_network_train_test.c
